--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <Header>
         <div class="content">
-                <img src="Images/logo.png" class="Logo" alt="Logo">
+                <img src="Images/Logo.png" class="Logo" alt="Logo">
             <div class="lhead"><h1>This is my website</h1></div>
             <div class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, aliquid!</div>
         </div>
